--- a/public/css/index.css
+++ b/public/css/index.css
@@ -71,3 +71,33 @@ textarea{
 #ratingNum{
 	padding:10px;
 }
+#mediaOverlay{
+	position:fixed;
+	width:100%;
+	height:100%; 
+	top:0;
+	left:0;
+	background-color: rgba(0,0,0,0.5);
+	z-index: 2;
+	cursor: pointer;
+}
+#overlayCanvas{
+	background-color: rgba(220,220,220);
+	width:1000px;
+	margin: 0 auto;
+}
+.hidden{
+	display:none;
+}
+.overlay{
+	display:block;
+}
+.reviewer{
+	font-size:30px;
+	margin: 5px;
+}
+.rating{
+	font-size:30px;
+	margin: 5px;
+	margin-left: 20px;
+}
