--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,5 @@
-html{
-	background-color: lightgrey;
+h1{
+	font-size:84px;
 }
 
 body{
@@ -7,7 +7,7 @@ body{
 	margin: 0 auto;
 	margin-top:5px;
 	padding:10px;
-	width:1000px;
+	width:90%;
 	font-size:24px;
 	text-align:center
 }
@@ -30,12 +30,20 @@ textarea{
 	font-size:18px;
 }
 #nav{
+	border-style: solid none;
+	border-width: 1px;
+	border-color: black;
 	list-style-type: none;
+	padding: 15px 0;
+	whitespace:nowrap;
 }
 #nav li{
-	margin:20px;
-	padding:10px;
-	display:inline;
+	padding: 5px 30px;
+	display:inline-block;
+	border-right:1px solid black;
+}
+#nav li:last-child{
+	border-style:none;
 }
 #nav li a{
 	text-decoration:none;
@@ -44,13 +52,35 @@ textarea{
 #nav li a:visited{
 	color:rgb(70,70,70);
 }
+.searchBox{
+	border: 1px solid black;
+	height:40px;
+	width:100%;
+	border-radius: 30px;
+	background-color:white;
+}
+.searchBox:focus{
+	background-color: rgb(230,230,230);
+}
+.searchBox:focus::-webkit-input-placeholder { color:transparent; }
+.searchBox:focus:-moz-placeholder { color:transparent; } /* FF 4-18 */
+#listings{
+	display:flex;
+	flex-wrap: wrap;
+	width:100%
+}
 .listing{
+	flex: 1 0 25%;
 	margin: 10px 20px;
-	box-shadow:0 0 3px grey;
 	overflow:auto;
+	min-width:300px;
+	text-align:left;
 }
 .listing span{
 	margin: 0 30px;
+}
+.listing .listingType{
+	float:right;
 }
 .listing .listingImage{
 	max-height:150px;
@@ -58,10 +88,12 @@ textarea{
 }
 .listing .listingTitle{
 	font-size:32px;
-	margin-left: 50px;
 }
-.listing .info{
+.listing .listingText{
 	list-style-type:none;
+}
+.listing .listingText li{
+	margin-left: 80px;
 }
 .alert{
 	color:red;
@@ -76,22 +108,11 @@ textarea{
 	padding:10px;
 }
 #mediaOverlay{
-	position:fixed;
-	width:100%;
-	height:100%; 
 	top:0;
 	left:0;
-	background-color: rgba(0,0,0,0.5);
-	z-index: 2;
-	cursor: pointer;
-}
-#overlayCanvas{
-	background-color: rgba(220,220,220);
-	width:1000px;
-	margin: 0 auto;
 }
 .hidden{
-	display:none;
+	display:none !important;
 }
 .overlay{
 	display:block;
@@ -104,4 +125,11 @@ textarea{
 	font-size:30px;
 	margin: 5px;
 	margin-left: 20px;
+}
+.backButton{
+	font-size:60px;
+	background-color:white;
+	border:0;
+	float:left;	
+	padding:50px;
 }
