--- a/public/css/index.css
+++ b/public/css/index.css
@@ -117,18 +117,45 @@ textarea{
 
 }
 .reviewer{
-	font-size:30px;
+	font-size:24px;
 	margin: 5px;
 }
 .rating{
-	font-size:30px;
+	font-size:24px;
 	margin: 5px;
 	margin-left: 20px;
 }
+.reviews .description{
+	font-size:18px;
+}
+.bigMedia{
+	text-align:left;
+}
 .backButton{
+	position:-webkit-sticky;
+	position:sticky;
+	top:2.5vh;
+	float:left;
+	background-color:rgba(0,0,0,0);
 	font-size:60px;
-	background-color:white;
 	border:0;
-	float:left;	
-	padding:50px;
+	padding:2.5vw;
+	height:100%;
+}
+.mediaImg{
+	float:left;
+	margin: 0 15px;
+}
+.mediaCopies, .mediaType{
+	float:right;
+	clear:right;
+}
+.reviewSection{
+	clear:left;
+	margin:50px 10vw;	
+	padding:3px 0;
+}
+.writeReview{
+	float:left;
+	margin-right:7vw;
 }
